implementando atualizacao e remocao de grupo
